/*
 * Copyright 2020 EPAM Systems, Inc. (https://www.epam.com/)
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

import React from "react";
import { shallow } from "enzyme";
import { Provider } from "react-redux";
import PropTypes from "prop-types";

import ProductItem from "./productItem";
import EditProductBtn from "./editProductBtn";
import ProductItemContainer from "./productItemContainer";
import RemoveProductBtn from "./removeProductBtn";

const ReduxProvider = ({ children, reduxStore }) => (
  <Provider store={reduxStore}>{children}</Provider>
);

ReduxProvider.propTypes = {
  children: PropTypes.element,
  reduxStore: PropTypes.shape({}),
};

const defaultProps = {
  availabilityMsg: "Ready to order",
  available: "true",
};

describe("ProductItem", () => {
  it("it should match snapshot", () => {
    const wrapper = shallow(
      <ReduxProvider>
        <ProductItem {...defaultProps} />
      </ReduxProvider>
    );
    expect(wrapper).toMatchSnapshot();
  });
});

describe("EditProductBtn", () => {
  it("it should match snapshot", () => {
    const wrapper = shallow(
      <ReduxProvider>
        <EditProductBtn />
      </ReduxProvider>
    );
    expect(wrapper).toMatchSnapshot();
  });
});

describe("ProductItemContainer", () => {
  it("it should match snapshot", () => {
    const wrapper = shallow(
      <ReduxProvider>
        <ProductItemContainer />
      </ReduxProvider>
    );
    expect(wrapper).toMatchSnapshot();
  });
});

describe("RemoveProductBtn", () => {
  it("it should match snapshot", () => {
    const wrapper = shallow(
      <ReduxProvider>
        <RemoveProductBtn />
      </ReduxProvider>
    );
    expect(wrapper).toMatchSnapshot();
  });
});
